--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap");
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,6 +7,7 @@
 }
 
 body {
+    font-family: "Quicksand", sans-serif;
     font-size: 100%;
 }
 
