updated footer link

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ body {
 
 .timerDaysCountdownContainer {
     display: flex;
+    
 }
 
 .timerDaysCountdown {
@@ -48,6 +49,7 @@ body {
     align-content: center;
     border-radius: 1em;
     margin-left: 2em;
+    background-color: rgba(255, 255, 255, 0.15);
 }
 
 .dateNum {
@@ -67,4 +69,14 @@ body {
 
 #mainButton {
     border-radius: 0em;
+}
+
+footer a {
+    color: #FFC108;
+    background-color: #242424;
+}
+
+footer a:hover {
+    color: #fff;
+    text-decoration: none;
 }
